<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017.
  ~
  ~ This file is part of the Code Cyprus App.
  ~
  ~ The Code Cyprus App is free software: you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of
  ~ the License, or (at your option) any later version.
  ~
  ~  Code Cyprus App is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Code Cyprus App. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name" translatable="false">Code Cyprus</string>
    <string name="version_name" translatable="false">1.6.0</string>

    <!--about dialog-->
    <string name="about_aspectsense">Developed by\nAspectSense.com © 2014–2017</string>
    <string name="Rate_us">Rate us</string>
    <string name="Dismiss">Dismiss</string>
    <string name="AspectSense_icon">AspectSense</string>

    <!--resume or clear dialog-->
    <string name="Resume_or_clear_message">A stored session exists for treasure hunt: \'%1$s\'.\n\nWould you like to resume it, or start a new one?</string>
    <string name="Resume">Resume</string>
    <string name="Start_new">Start new</string>
    <string name="Cancel">Cancel</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Version">Version</string>
    <string name="Install">Wanted to tell you how cool Code Cyprus is! See for yourself at codecyprus.org</string>
    <string name="Share">Share</string>
    <string name="Love_the_app">Love the app?</string>
    <string name="Tell_the_world">Tell the world</string>
    <string name="Share_with_your_friends">Share with your friends</string>
    <string name="Curious_to_see_the_code">Curious to see the code?</string>
    <string name="Visit_the_Github_page">Visit the project\'s Github page</string>

    <!--skip dialog-->
    <string name="Skip_question">Skip question?</string>
    <string name="Are_you_sure_you_want_to_skip_the_current_question">Are you sure you want to skip the current question?</string>

    <!--confirm MCQ dialog-->
    <string name="Confirm_MCQ">Please confirm your answer</string>
    <string name="Are_you_sure_you_want_to_submit_for_the_current_question">Are you sure you want to submit \'%1$s\' for the current question?</string>

    <string name="codecyprus_dot_org_url" translatable="false">http://codecyprus.org</string>
    <string name="aspectsense_dot_com_url" translatable="false">http://aspectsense.com</string>

    <string name="Ahoy">Ahoy pirates! And welcome to the Code Cyprus\' Treasure Hunt!\n\nIf you have questions, select the \'Help\' menu. When you are ready, click the button below to get started!</string>
    <string name="Start">Start</string>
    <string name="Lets_get_started">Let\'s get started!</string>
    <string name="Android_pirate">Android pirate</string>
    <string name="Select_a_category">Select a category</string>
    <string name="Enter_code_to_view_hidden_contests">Enter code to view hidden contests</string>
    <string name="Submit">Submit</string>

    <string name="Training">Training</string>
    <string name="Please_wait">Please wait…</string>
    <string name="Floor">Floor</string>
    <string name="Select_location">Select location</string>
    <string name="Select_floor">Select floor</string>
    <string name="Select_account">Select account</string>
    <string name="You_must_activate_the_WiFi_first">You must activate the WiFi first</string>
    <string name="Indoors_location">Indoors location</string>
    <string name="Scan">Scan</string>
    <string name="Settings">Settings</string>
    <string name="Show_training_points">Show training points</string>

    <string name="ACTIVE">ACTIVE</string>
    <string name="ACTIVE_SESSION">ACTIVE SESSION</string>
    <string name="ACTIVE_SESSION_with_team_name">ACTIVE SESSION (%1$s)</string>

    <string name="REFRESH">REFRESH</string>
    <string name="Refresh">Refresh</string>
    <string name="OK">OK</string>
    <string name="Enter_admin_code">Enter admin code</string>
    <string name="First_select_a_treasure_hunt_to_join">First select a treasure to hunt!</string>
    <string name="Valid_until">Valid until: %1$s</string>
    <string name="Valid_from_until">Valid from: %1$s until: %2$s</string>
    <string name="Going_live_in">Going live in: %1$s</string>
    <string name="Ends_in">Ends in: %1$s</string>

    <string name="just_now">just_now</string>
    <plurals name="seconds">
        <item quantity="one">%1$s second</item>
        <item quantity="other">%1$s seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%1$s minute</item>
        <item quantity="other">%1$s minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%1$s hour</item>
        <item quantity="other">%1$s hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%1$s week</item>
        <item quantity="other">%1$s weeks</item>
    </plurals>

    <string name="Finished_ago">Finished: %1$s ago</string>
    <string name="Find_the_Treasure">Find the Treasure!</string>
    <string name="Team_names_and_emails">Ahoy, we are looking for the \'%1$s\' treasure. Now tell us you team\'s names and emails and we are ready to go!</string>
    <string name="Add_second_pirate">Add second pirate</string>
    <string name="Remove_second_pirate">Remove second pirate</string>
    <string name="Team">Team</string>
    <string name="Team_name">Team name</string>
    <string name="First_pirate">First pirate</string>
    <string name="Second_pirate">Second pirate</string>
    <string name="Name">Name</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Empty_name">Empty name</string>
    <string name="Empty_email">Empty email</string>
    <string name="Invalid_email">Invalid email</string>

    <string name="Answer_here">Answer here …</string>
    <string name="Score_is">Score is: %1$d </string>
    <string name="Score">Score: %1$d </string>
    <string name="Score_and_Team">Score: %1$d (%2$s)</string>
    <string name="SKIP">SKIP</string>
    <string name="Skip">Skip</string>
    <string name="Skipped_has_more_questions">Skipped, has more questions…</string>
    <string name="Skipped_finished">Skipped, finished!</string>
    <string name="Loading">Loading …</string>
    <string name="Requires_location">Requires location!</string>
    <string name="Cannot_be_skipped">Cannot be skipped!</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="Invalid_session">Invalid session!</string>
    <string name="Invalid_empty_answer">Invalid empty answer</string>
    <string name="Incorrect">Incorrect</string>
    <string name="Incorrect_msg">Incorrect: %1$s</string>
    <string name="Unknown_or_incorrect_location">Unknown or incorrect location</string>
    <string name="Correct">Correct!</string>
    <string name="Correct_finished">Correct, finished!</string>

    <string name="Website">Website</string>
    <string name="HELP">HELP</string>
    <string name="Help">Help</string>
    <string name="ABOUT">ABOUT</string>
    <string name="About">About</string>
    <string name="Technical">Technical</string>
    <string name="Error">Error</string>
    <string name="Resume_or_clear">Resume or clear?</string>
    <string name="about_p1">Thank you for visiting Code Cyprus, a non-profit project aiming at inspiring high school students to take interest in computer science, in Cyprus and beyond.</string>
    <string name="about_p2">Learn all about it at:</string>
    <string name="about_p3">This Android app serves as the client for the Treasure Hunt competition. The source code was kindly provided by aspectsense.com which also made it available as open source via an LGPL license at the following URL:</string>

    <string name="Score_board">Score board</string>
    <string name="Location">Location</string>
    <string name="Finished_in">Finished in: %1$s</string>
    <string name="Not_finished_yet">Not finished yet</string>
    <string name="Admin_access">Admin access</string>
    <string name="Show">Show</string>
    <string name="placeholder" translatable="false">placeholder</string>

    <string name="Feedback" translatable="false">Feedback</string>
    <string name="Scan_a_QR_code">Scan a QR code</string>
    <string name="QR_code">QR code</string>

    <string name="No_Internet">No Internet</string>
    <string name="It_seems_like_you_are_not_connected_to_Internet">It seems like you are not connected to the Internet.</string>
    <string name="Retry">Retry</string>

    <string name="URL_detected">URL detected</string>
    <string name="Would_you_like_to_open_this_URL">Would you like to open page %1$s</string>
    <string name="Open_URL">Open URL</string>
    <string name="Use_as_answer">Use as answer</string>

    <string name="Inactive_category">Inactive category</string>
    <string name="The_selected_category_is_not_active_yet">The selected category is not active yet. It starts in %1$s.</string>
    <string name="Try_again">Try again</string>
    <string name="Wait">Wait</string>

    <string name="True">True</string>
    <string name="False">False</string>
    <string name="Click_to_claim_your_prize">Click to claim your prize!</string>
    <string name="Claim_your_prize_by_scanning_this_code_back_at_the_main_desk">Claim your prize by scanning this code back at the main desk</string>
    <string name="You_have_not_answered_enough_questions_correctly">You have not answered enough questions correctly</string>
    <string name="You_must_attempt_all_questions_first">You must attempt all questions first</string>
    <string name="Acquired">Acquired</string>
    <plurals name="Acquired_time">
        <item quantity="zero">Acquired now</item>
        <item quantity="other">Acquired %1$s\' ago</item>
    </plurals>

</resources>