<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2017.
  ~
  ~ This file is part of the Code Cyprus App.
  ~
  ~ The Code Cyprus App is free software: you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of
  ~ the License, or (at your option) any later version.
  ~
  ~  Code Cyprus App is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Code Cyprus App. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@drawable/app_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/activity_current_question_pirate_image_view"
                android:src="@drawable/pirate_android_smaller"
                android:contentDescription="@string/Android_pirate"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/activity_current_question_feedback"
                android:text="@string/Feedback"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size"
                android:padding="4dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/activity_current_question_pirate_image_view"
                android:layout_toEndOf="@id/activity_current_question_pirate_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/activity_current_question_requires_location"
                android:padding="4dp"
                android:layout_below="@id/activity_current_question_feedback"
                android:layout_toRightOf="@id/activity_current_question_pirate_image_view"
                android:layout_toEndOf="@id/activity_current_question_pirate_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/Requires_location"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/activity_current_question_requires_location_check_box"
                    android:text="@string/Acquired"
                    android:textSize="@dimen/text_small_size"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/activity_current_question_requires_location_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:id="@+id/activity_current_question_cannot_be_skipped"
                android:text="@string/Cannot_be_skipped"
                android:textSize="@dimen/text_size"
                android:textColor="@color/green"
                android:padding="4dp"
                android:layout_below="@id/activity_current_question_requires_location"
                android:layout_toRightOf="@id/activity_current_question_pirate_image_view"
                android:layout_toEndOf="@id/activity_current_question_pirate_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <LinearLayout
            android:background="@drawable/popup_inline"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/activity_current_question_question"
                android:text="@string/Loading"
                android:textSize="@dimen/text_size"
                android:background="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/activity_current_question_mcq_buttons"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/activity_current_question_button_A"
                    android:text="@string/A"
                    android:textSize="@dimen/text_size"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/button_start_height"/>

            <Button
                    android:id="@+id/activity_current_question_button_B"
                    android:text="@string/B"
                    android:textSize="@dimen/text_size"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/button_start_height"/>

            <Button
                    android:id="@+id/activity_current_question_button_C"
                    android:text="@string/C"
                    android:textSize="@dimen/text_size"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/button_start_height"/>

            <Button
                    android:id="@+id/activity_current_question_button_D"
                    android:text="@string/D"
                    android:textSize="@dimen/text_size"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/button_start_height"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/activity_current_question_boolean_buttons"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/activity_current_question_button_True"
                    android:text="@string/True"
                    android:textSize="@dimen/text_size"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/button_start_height"/>

            <Button
                    android:id="@+id/activity_current_question_button_False"
                    android:text="@string/False"
                    android:textSize="@dimen/text_size"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/button_start_height"/>

        </LinearLayout>

        <RelativeLayout
                android:id="@+id/activity_current_question_text_buttons"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/activity_current_question_button_submit"
                    android:text="@string/Submit"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_start_height"/>

            <EditText
                    android:id="@+id/activity_current_question_edit_text"
                    android:textSize="@dimen/text_size"
                    android:hint="@string/Answer_here"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_marginBottom="8dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@id/activity_current_question_button_submit"
                    android:layout_toStartOf="@id/activity_current_question_button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>