<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2017.
  ~
  ~ This file is part of the Code Cyprus App.
  ~
  ~ The Code Cyprus App is free software: you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of
  ~ the License, or (at your option) any later version.
  ~
  ~  Code Cyprus App is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Code Cyprus App. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/activity_start_quiz_imageview_pirate"
                    android:src="@drawable/pirate_android_smaller"
                    android:contentDescription="@string/Android_pirate"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/activity_start_quiz_text_view_bubble"
                    android:textSize="@dimen/text_size"
                    android:background="@drawable/popup_inline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/semitransparent_white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Team"
                android:textColor="@color/pirate_red"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/activity_start_quiz_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/Team_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/activity_start_quiz_team_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/First_pirate"
                    android:textColor="@color/pirate_red"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Name"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/activity_start_quiz_pirate1_name"
                        android:hint="@string/First_pirate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:inputType="text" />

                </LinearLayout>

                <Button
                    android:id="@+id/activity_start_quiz_button_add_second_pirate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Add_second_pirate" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_start_quiz_second_pirate_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/Second_pirate"
                    android:textColor="@color/pirate_red"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Name"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/activity_start_quiz_pirate2_name"
                        android:hint="@string/Second_pirate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:inputType="text" />

                </LinearLayout>

                <Button
                    android:id="@+id/activity_start_quiz_button_remove_second_pirate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Remove_second_pirate" />

            </LinearLayout>

        </LinearLayout>

        <Button
                android:id="@+id/activity_start_quiz_button_start"
                android:text="@string/Find_the_Treasure"
                android:drawableRight="@drawable/ic_media_embed_play"
                android:drawableEnd="@drawable/ic_media_embed_play"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_start_height"/>

    </LinearLayout>

</ScrollView>