<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2017.
  ~
  ~ This file is part of the Code Cyprus App.
  ~
  ~ The Code Cyprus App is free software: you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3 of
  ~ the License, or (at your option) any later version.
  ~
  ~  Code Cyprus App is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Code Cyprus App. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@color/bright_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <LinearLayout
                android:padding="8dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

            <ImageView
                    android:src="@drawable/ic_launcher"
                    android:contentDescription="@string/About"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                <TextView
                        android:text="@string/app_name"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

                <TextView
                        android:id="@+id/dialog_about_build_name"
                        android:text="@string/version_name"
                        android:textStyle="bold|italic"
                        android:textSize="@dimen/text_small_size"
                        android:layout_marginTop="4dp"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/dialog_about_aspectsense_row"
                android:gravity="end"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_marginTop="4dip"
                android:layout_marginBottom="2dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/dialog_about_aspectsense_logo"
                    android:src="@drawable/aspectsense_logo_small"
                    android:contentDescription="@string/AspectSense_icon"
                    android:paddingTop="12dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/about_aspectsense"
                    android:textSize="@dimen/text_small_size"
                    android:gravity="right"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>